--- a/galileo_mini_x5_description/CMakeLists.txt
+++ b/galileo_mini_x5_description/CMakeLists.txt
@@ -4,7 +4,7 @@ project(galileo_mini_x5_description)
 find_package(ament_cmake REQUIRED)
 
 install(
-		DIRECTORY launch meshes urdf
+		DIRECTORY launch meshes urdf xml
 		DESTINATION share/${PROJECT_NAME}/
 )
 
